# ChatwithMultiplePapers-GenAI

./: README.md  pyproject.toml
app/: rag_chain.py  server.py
rag-data-loader/: rag_load_and_process.py
